--- a/index.html
+++ b/index.html
@@ -31,34 +31,26 @@
         <div class="row">
             <div class="well">
                 <h2>Let's Play</h2>
-                <button type="button" class="btn btn-daneger" id="play">Play</button>
-                <div class="col-md-6">
-                    <form id="error">
-                        <h3>Player 1</h3>
-                        <label for="next" id="player1"></label>
-                        <span id="p1">
+                <button type="button" id="play1" class="btn btn-daneger" id="play">Play</button>
+                <form id="error">
+                    <h3>Player 1</h3>
+                    <label for="next" id="player1"></label>
+                    <span id="p1">
                             
                          </span>
-                        <button class="btn btn-primary">Add</button>
-                    </form>
-                </div>
-                <div class="col-md-6">
-                    <form id="comp">
-                        <h3>Player 2</h3>
-                        <div class="form-group">
-                            <label for="next" id="player2"></label>
-                            <span id="p2">
+                    <button id="result1" class="btn btn-primary">Add</button>
+                </form>
+                <form id="comp">
+                    <h3>Player 2</h3>
+                    <label for="next" id="player2"></label>
+                    <span id="p2">
 
                              </span>
-                        </div>
-                        <button class="btn btn-primary">Add</button>
-                    </form>
-                </div>
+                    <button id="result2" class="btn btn-primary">Add</button>
+                </form>
                 <br><br><br><br>
-                <div class="button">
-                    <button type="submit" class="btn btn-danger" id="show">Play</button>
-                    <button type="submit" class="btn btn-success" id="pass">Pass</button>
-                </div>
+                <button type="submit" id="play2" class="btn btn-danger" id="show">Play</button>
+                <button type="submit" id="pass1" class="btn btn-success" id="pass">Pass</button>
             </div>
         </div>
     </div>
