add the js text changes made to the repository

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                     <button id="result2" class="btn btn-primary">Add</button>
                 </form>
                 <br><br><br><br>
-                <button type="submit" id="play2" class="btn btn-danger" id="show">Play</button>
-                <button type="submit" id="pass1" class="btn btn-success" id="pass">Pass</button>
+                <button type="button" id="dice" class="btn btn-primary">Dice</button>
+                <button type="submit" id="show" class="btn btn-danger">Play</button>
+                <button type="submit" id="pass" class="btn btn-success">Pass</button>
             </div>
         </div>
     </div>
