--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                     <span id="p1">
                             
                          </span>
+                    <span id="total1">
+
+                         </span>
                     <button id="result1" class="btn btn-primary">Add</button>
                 </form>
                 <form id="comp">
@@ -46,10 +49,17 @@
                     <span id="p2">
 
                              </span>
+                    <span id="total2">
+
+                             </span>
                     <button id="result2" class="btn btn-primary">Add</button>
+                    <span id="roll">
+                        <ul id="dice">
+                            
+                        </ul>
+                    </span>
                 </form>
                 <br><br><br><br>
-                <button type="button" id="dice" class="btn btn-primary">Dice</button>
                 <button type="submit" id="show" class="btn btn-danger">Play</button>
                 <button type="submit" id="pass" class="btn btn-success">Pass</button>
             </div>
