--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
         <div class="row">
             <div class="well">
                 <h2>Let's Play</h2>
-                <button type="button" id="play1" class="btn btn-daneger" id="play">Play</button>
                 <form id="error">
                     <h3>Player 1</h3>
                     <label for="next" id="player1"></label>
@@ -53,11 +52,11 @@
 
                              </span>
                     <button id="result2" class="btn btn-primary">Add</button>
-                    <span id="roll">
+                    <div id="roll">
                         <ul id="dice">
-                            
+
                         </ul>
-                    </span>
+                    </div>
                 </form>
                 <br><br><br><br>
                 <button type="submit" id="show" class="btn btn-danger">Play</button>
