add js and html

--- a/index.html
+++ b/index.html
@@ -59,15 +59,19 @@
                     </div>
                 </div>
                 <div id="roll">
-                    <ul id="dice">
+                    <ul>
 
                     </ul>
+                </div>
+                <div class="score">
+
                 </div>
                 </form>
                 <br><br><br><br>
                 <div class="button">
                     <button type="submit" id="show" class="btn btn-danger">Play</button>
                     <button type="submit" id="pass" class="btn btn-success">Pass</button>
+                    <button type="submit" id="restart" class="btn btn-primary">Restart</button>
                 </div>
             </div>
         </div>
